--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,10 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.14.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.0",
+    "validator": "^13.15.0"
   }
 }
