--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -3,6 +3,7 @@
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "no-console": "off",
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
   }
 }
