--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "web_project_around_express",
   "version": "1.0.0",
   "description": "web around express",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint .",
@@ -30,10 +30,15 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-winston": "^4.2.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "winston": "^3.10.0"
   }
 }
