--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 
 server {
-    listen 80;
+    listen 80 default_server;
     server_name www.arounadaly.mooo.com arounadaly.mooo.com;
 
     root /home/adalyherondale9/projects/web_project_api_full/frontend/dist;
