--- a/nginx.conf
+++ b/nginx.conf
@@ -1,35 +1,24 @@
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
 
-server {
-    listen 80 default_server;
-    server_name www.arounadaly.mooo.com arounadaly.mooo.com;
-
-    root /home/adalyherondale9/projects/web_project_api_full/frontend/dist;
-    index index.html;
-
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-        expires 1y;
-        add_header Cache-Control "public, max-age=31536000";
-    }
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 80;
-    server_name api.backaround.mooo.com;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location / {
-        proxy_pass http://localhost:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-    }
+    sendfile on;
+    keepalive_timeout 65;
+
+    # Cargar todos los archivos de configuración de todos los sitios en el servidor.
+    include /etc/nginx/sites-enabled/*;
 }
+
+
+
+
+
 
